DS-3262 Fix alignment of 2nd column header for EntityExtraction [revdep skip]

--- a/inst/css/entityextraction.css
+++ b/inst/css/entityextraction.css
@@ -72,12 +72,17 @@ div.entity-extraction-main-container .entity-extraction-table th {
 
 div.entity-extraction-main-container .entity-extraction-table td {
     padding-top: 8px;
-    padding-left: 0px;
+    padding-left: 8px;
     padding-right: 8px;
     padding-bottom: 5px;
     font-size: 13px;
     vertical-align: top;
 }
+
+div.entity-extraction-main-container .entity-extraction-table td:nth-child(1) {
+    padding-left: 0px;
+}
+
 
 div.entity-extraction-main-container .entity-extraction-table caption {
     padding-bottom: 4px;
